--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.0",
-    "@mui/lab": "^5.0.0-alpha.82",
     "@mui/material": "^5.8.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
@@ -20,6 +19,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
     "history": "^5.3.0",
+    "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
